[gd_scene load_steps=12 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sounds/ping.ogg" type="AudioStream" id=4]
[ext_resource path="res://sounds/pock.ogg" type="AudioStream" id=5]
[ext_resource path="res://plugins/touchJoyPad/touchJoyPad.tscn" type="PackedScene" id=6]
[ext_resource path="res://plugins/touchJoyPad/analog/big_circle.png" type="Texture" id=7]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="CircleShape2D" id=4]
radius = 45.0

[node name="main" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="HUD" type="CanvasLayer" parent="."]
layer = 10

[node name="GUI" parent="HUD" instance=ExtResource( 2 )]
margin_left = 7.0
margin_top = 10.0
margin_right = 726.0
margin_bottom = 208.0
theme = SubResource( 1 )

[node name="VBox" type="VBoxContainer" parent="HUD"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.5
margin_top = -58.5
margin_right = 31.5
margin_bottom = 58.5

[node name="Message" type="Label" parent="HUD/VBox"]
margin_right = 63.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 2 )

[node name="Menu" type="PopupMenu" parent="HUD/VBox"]
margin_top = 65.0
margin_right = 154.0
margin_bottom = 187.0
custom_fonts/font = SubResource( 3 )
popup_exclusive = true
items = [ "Item 0", null, 0, false, false, -1, 0, null, "", false, "Item 1", null, 0, false, false, -1, 0, null, "", false ]
hide_on_item_selection = false
hide_on_checkable_item_selection = false

[node name="ViewportContainer" type="ViewportContainer" parent="HUD"]
margin_right = 1046.0
margin_bottom = 593.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamePad" parent="HUD/ViewportContainer" instance=ExtResource( 6 )]
position = Vector2( 116.803, 283.514 )

[node name="JumpButton" type="TouchScreenButton" parent="HUD/ViewportContainer"]
position = Vector2( 500.016, 199.273 )
normal = ExtResource( 7 )
shape = SubResource( 4 )
action = "jump"
visibility_mode = 1

[node name="ping" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "fx"

[node name="enemy_hit_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 10.0
bus = "fx"

[connection signal="id_pressed" from="HUD/VBox/Menu" to="." method="_on_Menu_id_pressed"]
